# swagger_server/controllers/default_controller.py
@@ -36,62 +36,37 @@ def get_user(user=None):
     }
     return  json.dumps(response)
 
-def get_days():  # noqa: E501
-    """Your GET endpoint
+def get_days(): 
+    return json.dumps(User.calculate_remaining_days_for_ROI(newUser))
 
-     # noqa: E501
-
-
-    :rtype: Object
-    """
-    return 'do some magic!'
-
-def get_hashrate():  # noqa: E501
-    """Your GET endpoint
-
-     # noqa: E501
-
-
-    :rtype: Object
-    """
-    return 'do some magic!'
+def get_hashrate(): 
+    return json.dumps(User.get_total_hashrate(newUser))
 
 def get_mine():  
-    return json.dumps(newUser.need_to_mine())
+    return json.dumps(User.need_to_mine(newUser))
 
-def get_profit():  # noqa: E501
-    """Your GET endpoint
+def get_profit(): 
+    return json.dumps(User.daily_profit(newUser))
 
-     # noqa: E501
-
-
-    :rtype: Object
-    """
-    return 'do some magic!'
-
-def get_revenue():  # noqa: E501
-    """Your GET endpoint
-
-     # noqa: E501
-
-
-    :rtype: Object
-    """
-    return 'do some magic!'
+def get_revenue():
+    return json.dumps(User.daily_revenue(newUser))
 
 def put_amount_mined(mined=input):  
-    newUser.set_ethereum_mined(mined)
-    return json.dumps(newUser.get_ethereum_mined())
+    User.set_ethereum_mined(newUser, mined)
+    return json.dumps(User.get_ethereum_mined(newUser))
 
 def put_power(power=input): 
-    newUser.set_power_rate(power)
-    return json.dumps(newUser.get_power_rate())
+    User.set_power_rate(newUser, power)
+    return json.dumps(User.get_power_rate(newUser))
 
 def put_rig(rig=input): 
-    newUser.set_total_cost(rig)
-    return json.dumps(newUser.get_total_cost())
+    User.set_total_cost(newUser, rig)
+    return json.dumps(User.get_total_cost(newUser))
 
 def put_tax(tax=input): 
-    newUser.set_tax_rate(tax)
-    return json.dumps(newUser.get_tax_rate())
+    User.set_tax_rate(newUser, tax)
+    return json.dumps(User.get_tax_rate(newUser))
+
+def put_add_gpu(gpu_name=input, gpu_quantity=input):
+    User.add_gpus(newUser, gpu_name, gpu_quantity)
 
